add and remove inhabitants

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>ao.parklife.web</title>
     <!-- build:css -->
       <link href="bower_modules/components-bootstrap/css/bootstrap.min.css" rel="stylesheet">
-      <link href="css/styles.css" rel="stylesheet">
+      <link href="css/parklife.css" rel="stylesheet">
     <!-- endbuild -->
     <!-- build:js -->
       <script src="app/require.config.js"></script>
